--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -8,12 +8,12 @@ author:
 - name: Antonio Fernández-Ares
   affiliation:  University of Granada, Spain
 - name: Pablo García-Sánchez
-  affiliation:  University of Cadiz, Spain
+  affiliation:  University of Cádiz, Spain
 - name: Victor Rivas
   affiliation:  University of Jaen, Spain
 date: "27 de noviembre de 2017"
 output: pdf_document
-abstract: The game Starcraft is one of the most interesting arenas to test new machine learning and computational intelligence techniques; however, StarCraft matches take a long time and creating a good dataset for training can be hard; besides, analyzing match logs to extract the main characteristics can also be done in many different ways to the point that extracting and processing data itself can take an inordinate amount of time. In this paper we present one such simplified dataset extracted from Robinson and Watson, which we have called RedDwarfData, containing several thousand matches processed to frames, so that temporal studies can also be undertaken. This dataset is available under a free license. An initial analysis and appraisal of these matches is also made. 
+abstract: The game Starcraft is one of the most interesting arenas to test new machine learning and computational intelligence techniques; however, StarCraft matches take a long time and creating a good dataset for training can be hard. Besides, analyzing match logs to extract the main characteristics can also be done in many different ways to the point that extracting and processing data itself can take an inordinate amount of time and of course, depending on what you choose, can bias learning algorithms. In this paper we present a simplified dataset extracted from the set of matches published by Robinson and Watson, which we have called RedDwarfData, containing several thousand matches processed to frames, so that temporal studies can also be undertaken. This dataset is available from GitHub under a free license. An initial analysis and appraisal of these matches is also made. 
 bibliography: prediction.bib
 ---
 
@@ -32,11 +32,11 @@ unique.ids <- length(unique(t$id))
 
 # Introduction
 
-\emph{StarCraft} is a well-known Real Time Strategy (\emph{RTS}) game whose first version was released in 1998 [@yoon2001starcraft]. The game consists of two opponents trying to beat each other over a squared arena. Every player has to build workers and buildings using the available resources located over the terrain. There exit three different kinds of species, any of then having different kinds of individuals. Species and individual differ in their skills, so that players have a wide range of possibilities in order to plan their strategies. The need to dynamically take decisions for both the short and the long terms make RTS adequate scenarios to test AI algorithms [@ontanon2013survey] that could be used later in real problems including financial, military and logistics problems. 
+\emph{StarCraft} is a well-known Real Time Strategy (\emph{RTS}) game whose first version was released in 1998 [@yoon2001starcraft]. The game consists of two opponents trying to beat each other over a square-shaped arena. Every player has to spawn workers and create buildings using the available resources, which are located over the terrain. Players can use one of three different kinds of species with different kinds of individuals, which differ in their skills, so that players have a wide range of possibilities in order to plan their strategies. The need to dynamically take decisions for both the short and the long terms make RTS adequate scenarios to test AI algorithms [@ontanon2013survey] that could be used later in real problems including financial, military and logistics scenarios. 
 
-\emph{StarCraft} has become popular among researchers thanks to \emph{BWAPI}, an API developed by the community that allows programming artificial agents and that was developed for StarCraft competitions [@buro2012real]. These agents can act just like regular players, according to a previously established algorithm; but, more important, they can collectse data as matches are running. The data collected this way can be later analysed, so that machine learning techniques can be applied for both supervised and unsupervised learning.
+\emph{StarCraft} has become popular among researchers thanks in part to \emph{BWAPI}, an API developed by the community that allows programming artificial agents and that was developed for StarCraft competitions [@buro2012real]. These agents can act just like regular players, according to a previously established algorithm; but, more importantly, they can collect data as matches are running. The data collected this way can be later analysed, so that machine learning techniques can be applied for both supervised and unsupervised learning.
 
-Developing and releasing datasets for this task is thus a way of expanding research in this area and allowing researchers to develop their own bots or prediction algorithms without having to scrape them or actually play the games, a time-consuming task, to extract data from them. Several researchers have done so and we will refer to them in the state of the art; in this paper we part from Robertson and Watson's dataset [@RobertsonW14] and create a simpler one that can be used without needing many resources; even so, the data set is balanced with respect to duration, races and number of resources used by the players. 
+Developing and releasing datasets for developing and applying these techniques is thus a way of expanding research in this area and allowing researchers to develop their own bots or prediction algorithms without having to scrape them from websites or actually play the games, a time-consuming task, to extract data from them. Several researchers have done so and we will refer to them in the state of the art; in this paper we start from Robertson and Watson's dataset [@RobertsonW14] and create a simpler one that can be used without needing many resources; even so, the data set is balanced with respect to duration, races and number of resources used by the players. 
 
 The rest of the paper is organized as follows: next we will present the Starcraft datasets that have been published so far. In the next section we will show how Robertson and Watson's dataset was processed and the rationale for doing it that way. Then we will present a macro picture of the data set, to eventually draw some conclusions from it and possible lines of work using this dataset.
 
