--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -99,7 +99,24 @@ The combination Terran vs. Protoss includes the bigger number of
 matches, with close to two thousands, of which the majority are won by
 the Terran.
 
-<!-- Porcentaje de victorias de cada una de las razas -->
+```{r wins, echo=FALSE}
+wins.data <- data.frame(Race=character(),
+                        Wins=integer(),
+                        Loses=integer(),
+                        Ratio=double())
+
+for (i in c("Protoss","Zerg","Terran")) {
+    race.data <- match.data[ match.data$Winner == i |  match.data$Loser == i,]
+    wins.data <- rbind( wins.data,
+                       data.frame( Race=i,
+                                  Wins=length(race.data[match.data$Winner == i,]$id),
+                                  Loses=length(race.data[match.data$Loser == i,]$id) )
+                       )
+}
+wins.data$Ratio = wins.data$Wins/(  wins.data$Wins + wins.data$Loses)
+ggplot(aes(x=Race),data=wins.data)+geom_bar(stat=identity)+theme_tufte()+xlab("Winner.Loser")
+ggplot(aes(x=Race,y=Ratio),data=wins.data)+geom_bar(stat="identity")+theme_tufte()+xlab("Winner matches per race")
+```
 
 
 ## Conclusions
