Adding charts and fixing bugs

--- a/prediction.bib
+++ b/prediction.bib
@@ -9,7 +9,7 @@
 }
 
 @article{ontanon2013survey,
-  title={A survey of real-time strategy game {AI] research and competition in {StarCraft}},
+  title={A survey of real-time strategy game {AI} research and competition in {StarCraft}},
   author={Ontan{\'o}n, Santiago and Synnaeve, Gabriel and Uriarte, Alberto and Richoux, Florian and Churchill, David and Preuss, Mike},
   journal={IEEE Transactions on Computational Intelligence and AI in games},
   volume={5},
