--- a/starcraft-data.Rmd
+++ b/starcraft-data.Rmd
@@ -1,32 +1,46 @@
 ---
-title: "RedDwarfData: a simplified dataset of StarCraft matches"
-author: 
-- name: J. J. Merelo
-  affiliation: University of Granada, Spain
-- name: Antonio Álvarez Caballero
-  affiliation:  University of Oviedo, Spain
-- name: Antonio Fernández-Ares
-  affiliation:  University of Granada, Spain
-- name: Pablo García-Sánchez
-  affiliation:  University of Cádiz, Spain
-- name: Victor Rivas
-  affiliation:  University of Jaen, Spain
+title: 'RedDwarfData: a simplified dataset of StarCraft matches'
+author:
+- affiliation: University of Granada, Spain
+  name: J. J. Merelo
+- affiliation: University of Oviedo, Spain
+  name: Antonio Álvarez Caballero
+- affiliation: University of Granada, Spain
+  name: Antonio Fernández-Ares
+- affiliation: University of Cádiz, Spain
+  name: Pablo García-Sánchez
+- affiliation: University of Jaen, Spain
+  name: Victor Rivas
 date: "27 de noviembre de 2017"
-output: pdf_document
-abstract: The game Starcraft is one of the most interesting arenas to test new machine learning and computational intelligence techniques; however, StarCraft matches take a long time and creating a good dataset for training can be hard. Besides, analyzing match logs to extract the main characteristics can also be done in many different ways to the point that extracting and processing data itself can take an inordinate amount of time and of course, depending on what you choose, can bias learning algorithms. In this paper we present a simplified dataset extracted from the set of matches published by Robinson and Watson, which we have called RedDwarfData, containing several thousand matches processed to frames, so that temporal studies can also be undertaken. This dataset is available from GitHub under a free license. An initial analysis and appraisal of these matches is also made. 
+output:
+  html_document: default
+  pdf_document: default
 bibliography: prediction.bib
+abstract: The game Starcraft is one of the most interesting arenas to test new machine
+  learning and computational intelligence techniques; however, StarCraft matches take
+  a long time and creating a good dataset for training can be hard. Besides, analyzing
+  match logs to extract the main characteristics can also be done in many different
+  ways to the point that extracting and processing data itself can take an inordinate
+  amount of time and of course, depending on what you choose, can bias learning algorithms.
+  In this paper we present a simplified dataset extracted from the set of matches
+  published by Robinson and Watson, which we have called RedDwarfData, containing
+  several thousand matches processed to frames, so that temporal studies can also
+  be undertaken. This dataset is available from GitHub under a free license. An initial
+  analysis and appraisal of these matches is also made.
 ---
 
 ```{r setup, include=FALSE}
 #Librerías
 knitr::opts_chunk$set(cache=TRUE)
 source("scripts/funciones.R")
+library(ggplot2)
+load("scripts/datos/duration.Rdata")
 
 # Load data. normalizado.csv will have to be generated using the original files or downloaded from the release of this repo and placed in that directory
-t <- read.csv2("scripts/datos/normalizado.csv")
+#t <- read.csv2("scripts/datos/normalizado.csv")
 
 #Tamaño del conjunto de datos
-unique.ids <- length(unique(t$id))
+unique.ids <- length(duration$id)
 
 ```
 
@@ -76,8 +90,6 @@ A few macro analysis of the data in this dataset will allow us to compare it wit
 The duration of the matches is represented below.
 
 ```{r duration,echo=FALSE}
-library(ggplot2)
-load("scripts/datos/duration.Rdata")
 ggplot(duration,aes(x=maxFrames/24/60)) + 
   stat_bin(breaks=c(0,5,10,15,20,25,30,35,40,45,50,55,60,75,90,120,150,180),color="white") +
   stat_bin(breaks=c(0,5,10,15,20,25,30,35,40,45,50,55,60,75,90,120,150,180), geom="text", aes(label=..count..), vjust=-1.5) +
@@ -90,14 +102,14 @@ ggplot(duration,aes(x=maxFrames/24/60)) +
 
 The mode is between 20 and 25 minutes, with average equal to `r mean(duration$maxFrames/24/60)` and median `r mean(duration$maxFrames/24/60)`; they are not too different which indicates that the distribution is not too skewed. 
 
-```{r duration,echo=FALSE}
+```{r wl,echo=FALSE}
 library(ggthemes)
 load("scripts/datos/match.Rdata")
 ggplot(aes(x=WL),data=match.data)+geom_bar()+theme_tufte()+xlab("Winner.Loser")
 ```
 The combination Terran vs. Protoss includes the bigger number of
 matches, with close to two thousands, of which the majority are won by
-the Terran.
+the Terran. But in fact, the race that wins the most games it is involved it are teh Zerg, as is shown below. 
 
 ```{r wins, echo=FALSE}
 wins.data <- data.frame(Race=character(),
@@ -114,10 +126,10 @@ for (i in c("Protoss","Zerg","Terran")) {
                        )
 }
 wins.data$Ratio = wins.data$Wins/(  wins.data$Wins + wins.data$Loses)
-ggplot(aes(x=Race),data=wins.data)+geom_bar(stat=identity)+theme_tufte()+xlab("Winner.Loser")
-ggplot(aes(x=Race,y=Ratio),data=wins.data)+geom_bar(stat="identity")+theme_tufte()+xlab("Winner matches per race")
+ggplot(aes(x=reorder(Race,-Ratio),y=Ratio),data=wins.data)+geom_bar(stat="identity")+theme_tufte()+xlab("Winner matches per race")
 ```
 
+Both macro measures show that the data set is well balanced, and includes battles in all possible combinations. 
 
 ## Conclusions
 
