--- a/prediction.bib
+++ b/prediction.bib
@@ -397,3 +397,10 @@
   pages={2-8},
   year={2016}
 }
+
+@InProceedings{ijcci17starcraft,
+  author = 	 {Antonio Álvarez-Caballero and J. J. Merelo and Pablo García Sánchez and A. Fernández-Ares},
+  title = 	 {Early Prediction of the Winner in StarCraft Matches},
+  booktitle = {Proceedings IJCCI},
+  year = 	 2017}
+
